-- ==========================================================================================
-- ANSI-SQL-92 compliant schema for SampleProfile
-- Generated by CIMTool https://cimtool.ucaiug.io
-- 
-- Compound types are represented as separate 1:1 tables and enforced via
-- a combination of UNIQUE on columns that reference Compound type tables
-- and FK column constraint definitions to those tables.
-- 
-- Though Compounds do not have an "mRID" and do not inherently represent
-- persistent objects in the CIM (i.e. they do not inherit from IdentifiedObject)
-- they are given a surrogate identifier "id" distinct from "mRID" for
-- persistence purposes.
-- 
-- Non-IdentifiedObject classes (e.g. CurveData, RegularTimePoint,
-- NonlinearShuntCompensatorPoint, TapChangerTablePoint) also receive a
-- surrogate "id" PRIMARY KEY for the same reason — they are collection-member
-- or point-data classes with no natural single-column PK derivable from the
-- profile catalog XML. A heuristic UNIQUE constraint is additionally emitted
-- across all their required (NOT NULL) non-surrogate columns. See the
-- cimtool:has-mrid-ancestor function documentation for full details.
-- 
-- Tables that represent Compound types in the CIM are not normalized for
-- the following reasons:
-- 
--   Normalization, particularly to 3NF, typically requires:
--     No repeating groups.
--     No partial or transitive dependencies.
--     Every non-key attribute must depend only on the whole key.
--     
--   But compound classes in the CIM domain:
--     Do not have surrogate or natural primary keys derived from business rules.
--     Are logically value objects: any change to any attribute means the value is distinct.
--     Have implicit semantic atomicity — they're treated as indivisible chunks.
--     
--   Compound Value Object Design Concession
--   
--   CIM Compound types are treated as value objects — each compound row has
--   exactly one owner: the specific parent column on the specific parent row
--   that caused it to be created. Compound rows are NEVER shared between
--   parent columns or between parent rows, even when the attribute content
--   is identical. For example, if an Organisation has both a postalAddress
--   and a streetAddress that happen to hold the same physical address, two
--   distinct StreetAddress rows must still be inserted — each with its own
--   unique UUID surrogate "id" — one owned exclusively by postalAddress and
--   one owned exclusively by streetAddress.
--   
--   This is a deliberate design concession. It forgoes 3rd Normal Form for
--   compound data in exchange for a simple, consistent ownership model where
--   each compound row lives and dies with its single parent column instance.
--   Consumers inserting instance data for compounds MUST always generate a
--   unique UUID for each compound row and use that UUID as the FK value in
--   the parent column. Reuse of a compound UUID across multiple parent columns
--   or parent rows will violate the cascade delete constraints defined below
--   and corrupt the ownership semantics of the schema.
--   Compound Surrogate Key (UUID) Generation
--   
--   Each compound row requires a unique surrogate identifier assigned to its
--   "id" column at insert time. This UUID serves as both the primary key of
--   the compound row and the foreign key value stored in the parent column
--   (e.g. Organisation.postalAddress). Because each compound row has exactly
--   one owner, the UUID must be generated fresh for every compound insert —
--   it must never be reused across parent columns or parent rows.
--   
--   UUID generation is intentionally left to application-level code. ANSI
--   SQL-92 defines no standard mechanism for generating UUIDs or other unique
--   identifiers as column defaults, and all available approaches are
--   vendor-specific (e.g. gen_random_uuid() in PostgreSQL, NEWID() in SQL
--   Server, UUID() in MySQL). Embedding any of these would break the
--   cross-RDBMS portability that this generated schema is designed to preserve.
--   
--   Application code should generate UUIDs using the standard library
--   appropriate to the implementation language before issuing any insert
--   statements, for example:
--   
--   Java: java.util.UUID.randomUUID().toString()
--   C#: System.Guid.NewGuid().ToString()
--   Python: str(uuid.uuid4())
--   Node.js: crypto.randomUUID()
--   
--   The UUID should be assigned to the compound row's "id" column and
--   simultaneously written into the parent row's compound FK column within
--   the same transaction, ensuring consistency.
--   
--   Note that a custom backend-specific SQL builder could be implemented
--   alongside this one that targets a particular RDBMS and includes native
--   UUID generation as a column default (e.g. DEFAULT gen_random_uuid()).
--   Such a builder would sacrifice portability in exchange for removing the
--   UUID generation burden from application code entirely.
--   
--   If utilizing the jpa-rdfs or csharp-ef-rdfs CIMTool builders, this concern
--   is addressed directly in the code they generate. UUID assignment for compound
--   surrogate keys is handled automatically as a cross-cutting concern within
--   those builders, and no additional application-level UUID generation code is
--   required for compound inserts when using those generated artifacts.
-- ==========================================================================================
--

-- Set of attributes of an asset, representing typical datasheet information
-- of a physical device that can be instantiated and shared in different data
-- exchange contexts:
-- - as attributes of an asset instance (installed or in stock)
-- - as attributes of an asset model (product by a manufacturer)
-- - as attributes of a type asset (generic type of an asset as used in designs/extension
-- planning).
CREATE TABLE "AssetInfo"
(
    "mRID" VARCHAR(100) PRIMARY KEY
);

-- Defines the current status of the Crew - assigned, arrived, etc.
CREATE TABLE "CrewStatusKind" ( "name" VARCHAR(100) UNIQUE );
-- the crew is on site at the outage location
INSERT INTO "CrewStatusKind" ( "name" ) VALUES ( 'arrived' );
-- the crew has been assigned to work on a task
INSERT INTO "CrewStatusKind" ( "name" ) VALUES ( 'assigned' );
-- Indicates that the work is awaiting one or more crews to be assigned
INSERT INTO "CrewStatusKind" ( "name" ) VALUES ( 'awaitingCrewAssignment' );
-- the crew has been dispatched to work on an outage
INSERT INTO "CrewStatusKind" ( "name" ) VALUES ( 'enroute' );
-- the crew has corrected the outage in the field. The equipment or other
-- devices may not be energized at this time.
INSERT INTO "CrewStatusKind" ( "name" ) VALUES ( 'fieldComplete' );

-- Electronic address information.
CREATE TABLE "ElectronicAddress"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- Primary email address.
    "email1" VARCHAR(255),
    -- Alternate email address.
    "email2" VARCHAR(255),
    -- Address on local area network.
    "lan" VARCHAR(255),
    -- MAC (Media Access Control) address.
    "mac" VARCHAR(255),
    -- Password needed to log in.
    "password" VARCHAR(255),
    -- Radio address.
    "radio" VARCHAR(255),
    -- User ID needed to log in, which can be for an individual person, an organisation,
    -- a location, etc.
    "userID" VARCHAR(255),
    -- World wide web address.
    "web" VARCHAR(255)
);

-- This is a root class to provide common identification for all classes needing
-- identification and naming attributes.
CREATE TABLE "IdentifiedObject"
(
    "mRID" VARCHAR(100) PRIMARY KEY,
    -- The name is any free human readable and possibly non unique text naming
    -- the object.
    "name" VARCHAR(255)
);

-- The Name class provides the means to define any number of human readable
-- names for an object. A name is <b>not</b> to be used for defining inter-object
-- relationships. For inter-object relationships instead use the object identification
-- 'mRID'.
CREATE TABLE "Name"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- Any free text that name the object.
    "name" VARCHAR(255),
    -- Identified object that this name designates.
    -- FK column reference to table representing the "IdentifiedObject" class
    "IdentifiedObject" VARCHAR(100)
);

-- Organisation that might have roles as utility, contractor, supplier, manufacturer,
-- customer, etc.
CREATE TABLE "Organisation"
(
    "mRID" VARCHAR(100) PRIMARY KEY,
    -- Electronic address.
    -- FK column reference to the table representing the "ElectronicAddress" compound
    "electronicAddress" VARCHAR(100) UNIQUE,
    -- Parent organisation of this organisation.
    -- FK column reference to table representing the "ParentOrganization" class
    "ParentOrganisation" VARCHAR(100),
    -- Phone number.
    -- FK column reference to the table representing the "TelephoneNumber" compound
    "phone1" VARCHAR(100) UNIQUE,
    -- Additional phone number.
    -- FK column reference to the table representing the "TelephoneNumber" compound
    "phone2" VARCHAR(100) UNIQUE,
    -- Postal address, potentially different than 'streetAddress' (e.g., another
    -- city).
    -- FK column reference to the table representing the "StreetAddress" compound
    "postalAddress" VARCHAR(100) UNIQUE,
    -- Street address.
    -- FK column reference to the table representing the "StreetAddress" compound
    "streetAddress" VARCHAR(100) UNIQUE
);

-- Overhead wire data.
CREATE TABLE "OverheadWireInfo"
(
    "mRID" VARCHAR(100) PRIMARY KEY
);

CREATE TABLE "ParentOrganization"
(
    "mRID" VARCHAR(100) PRIMARY KEY
);

-- An unordered enumeration of phase identifiers. Allows designation of phases
-- for both transmission and distribution equipment, circuits and loads. The
-- enumeration, by itself, does not describe how the phases are connected
-- together or connected to ground. Ground is not explicitly denoted as a
-- phase.
-- Residential and small commercial loads are often served from single-phase,
-- or split-phase, secondary circuits. For the example of s12N, phases 1 and
-- 2 refer to hot wires that are 180 degrees out of phase, while N refers
-- to the neutral wire. Through single-phase transformer connections, these
-- secondary circuits may be served from one or two of the primary phases
-- A, B, and C. For three-phase loads, use the A, B, C phase codes instead
-- of s12N.
-- The integer values are from IEC 61968-9 to support revenue metering applications.
CREATE TABLE "PhaseCode" ( "name" VARCHAR(100) UNIQUE );
-- Phase A.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'A' );
-- Phases A and B.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'AB' );
-- Phases A, B, and C.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'ABC' );
-- Phases A, B, C, and N.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'ABCN' );
-- Phases A, B, and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'ABN' );
-- Phases A and C.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'AC' );
-- Phases A, C and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'ACN' );
-- Phases A and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'AN' );
-- Phase B.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'B' );
-- Phases B and C.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'BC' );
-- Phases B, C, and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'BCN' );
-- Phases B and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'BN' );
-- Phase C.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'C' );
-- Phases C and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'CN' );
-- Neutral phase.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'N' );
-- Unknown non-neutral phase.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'X' );
-- Unknown non-neutral phase plus neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'XN' );
-- Two unknown non-neutral phases.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'XY' );
-- Two unknown non-neutral phases plus neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'XYN' );
-- No phases specified.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 'none' );
-- Secondary phase 1.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's1' );
-- Secondary phase 1 and 2.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's12' );
-- Secondary phases 1, 2, and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's12N' );
-- Secondary phase 1 and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's1N' );
-- Secondary phase 2.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's2' );
-- Secondary phase 2 and neutral.
INSERT INTO "PhaseCode" ( "name" ) VALUES ( 's2N' );

-- Current status information relevant to an entity.
CREATE TABLE "Status"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- Date and time for which status 'value' applies.
    "dateTime" TIMESTAMP,
    -- Reason code or explanation for why an object went to the current status
    -- 'value'.
    "reason" VARCHAR(255),
    -- Pertinent information regarding the current 'value', as free form text.
    "remark" VARCHAR(255),
    -- Status value at 'dateTime'; prior status changes may have been kept in
    -- instances of activity records associated with the object to which this
    -- status applies.
    "value" VARCHAR(255)
);

-- General purpose street and postal address information.
CREATE TABLE "StreetAddress"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- The language in which the address is specified, using ISO 639-1 two digit
    -- language code.
    "language" VARCHAR(255),
    -- Post office box.
    "poBox" VARCHAR(255),
    -- Postal code for the address.
    "postalCode" VARCHAR(255),
    -- Status of this address.
    -- FK column reference to the table representing the "Status" compound
    "status" VARCHAR(100) UNIQUE,
    -- Street detail.
    -- FK column reference to the table representing the "StreetDetail" compound
    "streetDetail" VARCHAR(100) UNIQUE,
    -- Town detail.
    -- FK column reference to the table representing the "TownDetail" compound
    "townDetail" VARCHAR(100) UNIQUE
);

-- Street details, in the context of address.
CREATE TABLE "StreetDetail"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- First line of a free form address or some additional address information
    -- (for example a mail stop).
    "addressGeneral" VARCHAR(255),
    -- (if applicable) Second line of a free form address.
    "addressGeneral2" VARCHAR(255),
    -- (if applicable) Third line of a free form address.
    "addressGeneral3" VARCHAR(255),
    -- (if applicable) In certain cases the physical location of the place of
    -- interest does not have a direct point of entry from the street, but may
    -- be located inside a larger structure such as a building, complex, office
    -- block, apartment, etc.
    "buildingName" VARCHAR(255),
    -- (if applicable) Utilities often make use of external reference systems,
    -- such as those of the town-planner's department or surveyor general's mapping
    -- system, that allocate global reference codes to streets.
    "code" VARCHAR(255),
    -- The identification by name or number, expressed as text, of the floor in
    -- the building as part of this address.
    "floorIdentification" VARCHAR(255),
    -- Name of the street.
    "name" VARCHAR(255),
    -- Designator of the specific location on the street.
    "number" VARCHAR(255),
    -- Prefix to the street name. For example: North, South, East, West.
    "prefix" VARCHAR(255),
    -- Suffix to the street name. For example: North, South, East, West.
    "suffix" VARCHAR(255),
    -- Number of the apartment or suite.
    "suiteNumber" VARCHAR(255),
    -- Type of street. Examples include: street, circle, boulevard, avenue, road,
    -- drive, etc.
    "type" VARCHAR(255),
    -- True if this street is within the legal geographical boundaries of the
    -- specified town (default).
    "withinTownLimits" INTEGER DEFAULT 0 CHECK ("withinTownLimits" IN (0, 1))
);

-- Telephone number.
CREATE TABLE "TelephoneNumber"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- (if applicable) Area or region code.
    "areaCode" VARCHAR(255),
    -- City code.
    "cityCode" VARCHAR(255),
    -- Country code.
    "countryCode" VARCHAR(255),
    -- (if applicable) Dial out code, for instance to call outside an enterprise.
    "dialOut" VARCHAR(255),
    -- (if applicable) Extension for this telephone number.
    "extension" VARCHAR(255),
    -- (if applicable) Prefix used when calling an international number.
    "internationalPrefix" VARCHAR(255),
    -- Phone number according to International Telecommunication Union (ITU) E.164.
    "ituPhone" VARCHAR(255),
    -- Main (local) part of this telephone number.
    "localNumber" VARCHAR(255)
);

-- Town details, in the context of address.
CREATE TABLE "TownDetail"
(
    "id" VARCHAR(100) PRIMARY KEY,
    -- Town code.
    "code" VARCHAR(255),
    -- Name of the country.
    "country" VARCHAR(255),
    -- Town name.
    "name" VARCHAR(255),
    -- Town section. For example, it is common for there to be 36 sections per
    -- township.
    "section" VARCHAR(255),
    -- Name of the state or province.
    "stateOrProvince" VARCHAR(255)
);

-- Wire data that can be specified per line segment phase, or for the line
-- segment as a whole in case its phases all have the same wire characteristics.
CREATE TABLE "WireInfo"
(
    "mRID" VARCHAR(100) PRIMARY KEY,
    -- (if there is a different core material) Radius of the central core.
    "coreRadius" DOUBLE PRECISION,
    -- (if used) Number of strands in the steel core.
    "coreStrandCount" INTEGER,
    -- Geometric mean radius. If we replace the conductor by a thin walled tube
    -- of radius GMR, then its reactance is identical to the reactance of the
    -- actual conductor.
    "gmr" DOUBLE PRECISION,
    -- True if conductor is insulated.
    "insulated" INTEGER DEFAULT 0 CHECK ("insulated" IN (0, 1)),
    -- (if insulated conductor) Material used for insulation.
    -- FK column reference to table representing the "WireInsulationKind" enumeration
    "insulationMaterial" VARCHAR(100),
    -- (if insulated conductor) Thickness of the insulation.
    "insulationThickness" DOUBLE PRECISION,
    -- Conductor material.
    -- FK column reference to table representing the "WireMaterialKind" enumeration
    "material" VARCHAR(100)
);

-- Kind of wire insulation.
CREATE TABLE "WireInsulationKind" ( "name" VARCHAR(100) UNIQUE );
-- Asbestos and varnished cambric wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'asbestosAndVarnishedCambric' );
-- Belted pilc wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'beltedPilc' );
-- Butyl wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'butyl' );
-- Crosslinked polyethylene wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'crosslinkedPolyethylene' );
-- Ethylene propylene rubber wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'ethylenePropyleneRubber' );
-- High nolecular weight polyethylene wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'highMolecularWeightPolyethylene' );
-- High pressure fluid filled wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'highPressureFluidFilled' );
-- Low capacitance rubber wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'lowCapacitanceRubber' );
-- Oil paper wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'oilPaper' );
-- Other kind of wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'other' );
-- Ozone resistant rubber wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'ozoneResistantRubber' );
-- Rubber wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'rubber' );
-- Silicon rubber wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'siliconRubber' );
-- Tree resistant high molecular weight polyethylene wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'treeResistantHighMolecularWeightPolyethylene' );
-- Tree retardant crosslinked polyethylene wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'treeRetardantCrosslinkedPolyethylene' );
-- Unbelted pilc wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'unbeltedPilc' );
-- Varnished cambric cloth wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'varnishedCambricCloth' );
-- Varnished dacron glass wire insulation.
INSERT INTO "WireInsulationKind" ( "name" ) VALUES ( 'varnishedDacronGlass' );

-- Kind of wire material.
CREATE TABLE "WireMaterialKind" ( "name" VARCHAR(100) UNIQUE );
-- Aluminum-alloy conductor steel reinforced.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'aaac' );
-- Aluminum conductor steel reinforced.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'acsr' );
-- Aluminum wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'aluminum' );
-- Aluminum-alloy wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'aluminumAlloy' );
-- Aluminum-alloy-steel wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'aluminumAlloySteel' );
-- Aluminum-steel wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'aluminumSteel' );
-- Copper wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'copper' );
-- Other wire material.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'other' );
-- Steel wire.
INSERT INTO "WireMaterialKind" ( "name" ) VALUES ( 'steel' );

-- Wire spacing data that associates multiple wire positions with the line
-- segment, and allows to calculate line segment impedances. Number of phases
-- can be derived from the number of associated wire positions whose phase
-- is not neutral.
CREATE TABLE "WireSpacingInfo"
(
    "mRID" VARCHAR(100) PRIMARY KEY
);

------------------------------------------------------------------------------
-- Inheritance constraint definitions
------------------------------------------------------------------------------

-- Inheritance subclass-superclass constraint for table "AssetInfo"
ALTER TABLE "AssetInfo" ADD FOREIGN KEY ( "mRID" ) REFERENCES "IdentifiedObject" ( "mRID" );

-- Inheritance subclass-superclass constraint for table "Organisation"
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "mRID" ) REFERENCES "IdentifiedObject" ( "mRID" );

-- Inheritance subclass-superclass constraint for table "OverheadWireInfo"
ALTER TABLE "OverheadWireInfo" ADD FOREIGN KEY ( "mRID" ) REFERENCES "WireInfo" ( "mRID" );

-- Inheritance subclass-superclass constraint for table "ParentOrganization"
ALTER TABLE "ParentOrganization" ADD FOREIGN KEY ( "mRID" ) REFERENCES "Organisation" ( "mRID" );

-- Inheritance subclass-superclass constraint for table "WireInfo"
ALTER TABLE "WireInfo" ADD FOREIGN KEY ( "mRID" ) REFERENCES "AssetInfo" ( "mRID" );

-- Inheritance subclass-superclass constraint for table "WireSpacingInfo"
ALTER TABLE "WireSpacingInfo" ADD FOREIGN KEY ( "mRID" ) REFERENCES "AssetInfo" ( "mRID" );

------------------------------------------------------------------------------
-- Standard foreign key constraint definitions
------------------------------------------------------------------------------

-- Foreign keys for table "Name"
ALTER TABLE "Name" ADD FOREIGN KEY ( "IdentifiedObject" ) REFERENCES "IdentifiedObject" ( "mRID" );

-- Foreign keys for table "Organisation"
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "electronicAddress" ) REFERENCES "ElectronicAddress" ( "id" );
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "ParentOrganisation" ) REFERENCES "ParentOrganization" ( "mRID" );
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "phone1" ) REFERENCES "TelephoneNumber" ( "id" );
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "phone2" ) REFERENCES "TelephoneNumber" ( "id" );
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "postalAddress" ) REFERENCES "StreetAddress" ( "id" );
ALTER TABLE "Organisation" ADD FOREIGN KEY ( "streetAddress" ) REFERENCES "StreetAddress" ( "id" );

-- Foreign keys for table "StreetAddress"
ALTER TABLE "StreetAddress" ADD FOREIGN KEY ( "status" ) REFERENCES "Status" ( "id" );
ALTER TABLE "StreetAddress" ADD FOREIGN KEY ( "streetDetail" ) REFERENCES "StreetDetail" ( "id" );
ALTER TABLE "StreetAddress" ADD FOREIGN KEY ( "townDetail" ) REFERENCES "TownDetail" ( "id" );

------------------------------------------------------------------------------
-- Heuristic uniqueness constraints for non-IdentifiedObject classes
------------------------------------------------------------------------------

-- The following UNIQUE constraints are emitted for CIM classes that do not
-- inherit from IdentifiedObject and therefore carry a surrogate "id" PK rather
-- than a natural "mRID" PK. Because the profile catalog XML does not encode
-- which subset of columns forms the true natural composite key (that information
-- exists only in the IEC specification prose), these constraints span all
-- required (NOT NULL) non-surrogate columns as a heuristic guard. The
-- constraint may be wider than the true natural key but is never incorrect —
-- a wider UNIQUE prevents valid duplicate insertion; a missing UNIQUE permits
-- silent semantic corruption.

------------------------------------------------------------------------------
-- Cascade delete foreign key constraint definitions (for Compounds)
------------------------------------------------------------------------------

-- The following cascade delete constraints implement the compound value object
-- ownership model described in the file header. Each constraint takes the form:
-- 
-- ALTER TABLE <CompoundType> ADD CONSTRAINT ... FOREIGN KEY ("id")
-- REFERENCES <ParentTable> (<compoundColumn>) ON DELETE CASCADE;
-- 
-- This reverse-reference pattern means: when a parent row is deleted, any
-- compound child row whose "id" matches the parent's compound column value
-- is automatically deleted. Because each compound row has exactly one owner
-- (enforced by the unique UUID insertion directive above), this cascade
-- correctly and completely cleans up all compound child rows when their
-- parent is deleted — no application-level programmatic deletion is required.
-- 
-- Known DBMS constraint engine limitation: the DBMS enforces each cascade FK
-- constraint globally across all rows in the compound table. It has no awareness
-- of the per-row ownership convention. Consumers who violate the unique UUID
-- insertion directive — for example by reusing a compound row UUID in more than
-- one parent column — will encounter FK constraint violations at insert time,
-- since the DBMS will check the reused UUID against every cascade constraint
-- on the compound table simultaneously. This is by design: the constraint
-- violation serves as the enforcement mechanism for the ownership model.

-- Cascade deletes for compounds referenced in table "Name"

-- Cascade deletes for compounds referenced in table "Organisation"
ALTER TABLE "ElectronicAddress" ADD CONSTRAINT fk_ElectronicAddress_Organisation_electronicAddress FOREIGN KEY ( "id" ) REFERENCES "Organisation" ( "electronicAddress" ) ON DELETE CASCADE;
ALTER TABLE "TelephoneNumber" ADD CONSTRAINT fk_TelephoneNumber_Organisation_phone1 FOREIGN KEY ( "id" ) REFERENCES "Organisation" ( "phone1" ) ON DELETE CASCADE;
ALTER TABLE "TelephoneNumber" ADD CONSTRAINT fk_TelephoneNumber_Organisation_phone2 FOREIGN KEY ( "id" ) REFERENCES "Organisation" ( "phone2" ) ON DELETE CASCADE;
ALTER TABLE "StreetAddress" ADD CONSTRAINT fk_StreetAddress_Organisation_postalAddress FOREIGN KEY ( "id" ) REFERENCES "Organisation" ( "postalAddress" ) ON DELETE CASCADE;
ALTER TABLE "StreetAddress" ADD CONSTRAINT fk_StreetAddress_Organisation_streetAddress FOREIGN KEY ( "id" ) REFERENCES "Organisation" ( "streetAddress" ) ON DELETE CASCADE;

-- Cascade deletes for compounds referenced in table "StreetAddress"
ALTER TABLE "Status" ADD CONSTRAINT fk_Status_StreetAddress_status FOREIGN KEY ( "id" ) REFERENCES "StreetAddress" ( "status" ) ON DELETE CASCADE;
ALTER TABLE "StreetDetail" ADD CONSTRAINT fk_StreetDetail_StreetAddress_streetDetail FOREIGN KEY ( "id" ) REFERENCES "StreetAddress" ( "streetDetail" ) ON DELETE CASCADE;
ALTER TABLE "TownDetail" ADD CONSTRAINT fk_TownDetail_StreetAddress_townDetail FOREIGN KEY ( "id" ) REFERENCES "StreetAddress" ( "townDetail" ) ON DELETE CASCADE;

------------------------------------------------------------------------------
-- Foreign key column indexes for optimized queries and joins
------------------------------------------------------------------------------

CREATE INDEX ix_Name_IdentifiedObject ON "Name" ( "IdentifiedObject" );
CREATE INDEX ix_Organisation_electronicAddress ON "Organisation" ( "electronicAddress" );
CREATE INDEX ix_Organisation_ParentOrganisation ON "Organisation" ( "ParentOrganisation" );
CREATE INDEX ix_Organisation_phone1 ON "Organisation" ( "phone1" );
CREATE INDEX ix_Organisation_phone2 ON "Organisation" ( "phone2" );
CREATE INDEX ix_Organisation_postalAddress ON "Organisation" ( "postalAddress" );
CREATE INDEX ix_Organisation_streetAddress ON "Organisation" ( "streetAddress" );
CREATE INDEX ix_StreetAddress_status ON "StreetAddress" ( "status" );
CREATE INDEX ix_StreetAddress_streetDetail ON "StreetAddress" ( "streetDetail" );
CREATE INDEX ix_StreetAddress_townDetail ON "StreetAddress" ( "townDetail" );
